# PathLab-Viewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX_START_HERE.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  apply-hardening-error.txt  package.json  pnpm-lock.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: apply-public-hardening.yml  ci.yml  codeql.yml  dependency-review.yml  deploy-production.yml  fix-security-quality.yml  minimize-public-response.yml  security.yml
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
deploy/: .env.example  Caddyfile  Dockerfile.backend  Dockerfile.web  README.md  backend-requirements.txt  compose.yaml  oci-cli-requirements.in  oci-cli-requirements.txt  pathlab-viewer.service
deploy/scripts/: backup.sh  configure-bastion-target.sh  deploy-release.sh  deploy-via-bastion.sh  duckdns.sh  restore.sh  run-viewer-load-test.sh
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: PROJECT_GUIDE.md  REPOSITORY_MAP.md
docs/architecture/: LIBRARY_DOMAIN.md  LIBRARY_SHARING.md  OME_TIFF_PIPELINE.md  PASSWORD_RECOVERY.md  PATHLAB_FORGE_INTEGRATION.md  PATHLAB_PREP_SYSTEM.md
docs/compatibility/: PREPARED_SLIDE_V1.md
docs/evidence/: QA.md
docs/plans/: ROADMAP.md
migrations/: env.py
migrations/versions/: 20260719_0001_initial.py  20260719_0002_password_recovery.py  20260719_0003_credential_generation.py  (+5 more)
scripts/: apply_public_hardening.py  check_public_repository.py  run-server-checks.sh
(+90 files in other folders)
